frontend/test/should_pass/edge_model_006.gm
abstract edge class A;
edge class B extends A;
abstract edge class C extends B;
edge class D extends C;
