frontend/test/should_fail/inh_model_007.gm
edge class A extends B;
edge class B extends A;
